--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
           </div>
         </div>
       </div>
-      <div class="w-full flex flex-col text-center items-center justify-center">
-        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
+      <div class="w-full flex flex-col text-center items-center justify-center mb-6">
+        <a class="btn bg-white border-2 border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-lg"
           href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
           <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
           &nbsp;
