--- a/invest/project.html
+++ b/invest/project.html
@@ -42,52 +42,14 @@
   <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
   <script src="../js/jquery-eu-cookie-law-popup.js"></script>
   <script src="https://usebasin.com/f/06dcf3d4ebaf/ahoy.js" async defer></script>
+  <script>window.location.href = "https://trendydots.com";</script>
 </head>
 
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" data-aos-easing="ease" data-aos-delay="300"
   data-aos="fade-in">
-  <nav
-    class="font-sans bg-white text-center flex md:justify-between items-center md:flex-row flex-col px-4 py-2 container overflow-hidden"
-    style="box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    max-width: 100%; position: fixed; top: 0; z-index: 100; 
-    background: linear-gradient(90deg, #ffffff 0%, #eceff1 100%);">
-    <span class=" flex items-center">
-      <a href="https://trendydots.com" class="block text-left" target="_blank">
-        <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo" />
-      </a>
-      &nbsp;
-      <b class="text-lg flex text-left" style="font-size: 1.35rem;">
-        <span style="display: inline; text-indent: 0.2em; font-weight: 700;">trendy dots
-        </span>
-      </b>
-    </span>
-
-
-    <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
-      <li>
-        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-          href="https://www.patreon.com/bePatron?u=14590376" target="_blank">
-          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;
-          <span> Become a Patron</span>
-        </a>
-      </li>
-      <!-- 
-      <li>
-        <a href="https://www.paypal.me/trendydots" target="_blank"
-          class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
-          <img src="../paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;&nbsp;
-          <span> Donate one time</span>
-        </a>
-      </li>
--->
-    </ul>
-
-  </nav>
 
   <!-- header statement-->
-  <section style="margin-bottom: 0; margin-top:5em; "
+  <section style="margin-bottom: 0; margin-top:1em; "
     class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-2/3">
       <img src="./assets/img/in3.png" alt="" />
@@ -100,325 +62,15 @@
         Your first step to market research
       </h2>
 
-      <a href="#contact-us" target="_self"
+      <a href="https://trendydots.com" target="_self"
         class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
         style="border-color: pink;">
-        <span> Contact us</span>
+        <span> Go to https://trendydots.com</span>
       </a>
     </div>
 
   </section>
 
-
-  <!-- we offer -->
-  <section class="font-sans w-full p-8 flex flex-col lg:flex-col text-center"
-    style="background: #F5F5F5; margin-bottom: 0;">
-    <div class="text-center">
-      <h1 class="my-4 font-medium">We offer</h1>
-    </div>
-    <div class="flex flex-col sm:flex-row flex-wrap my-8 w-full items-center justify-around">
-      <div
-        class="m-2 w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-
-        <h3 class="mt-4 mb-1">Performance</h3>
-        <p class="mt-4 text-center text-grey-dark leading-normal px-6 ">Build reports with your keywords in seconds.
-          Take
-          notes about your findings. Revisit your research any time.</p>
-      </div>
-      <div
-        class="m-2 w-full sm:w-1/2 md:w-1/4  flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-
-        <h3 class="mt-4 mb-1">Scalability</h3>
-        <p class="mt-4 text-center text-grey-dark leading-normal ">With a growing application marketplace, our platform
-          offers you a multitude of public data interpreters.</p>
-      </div>
-      <div
-        class="m-2 w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-
-        <h3 class="mt-4 mb-1">Friendly Intergations</h3>
-        <p class="mt-4 text-center text-grey-dark leading-normal ">Build your own apps on top of our system. Your data
-          sources can complement ours so that your results benefit from both.</p>
-      </div>
-
-    </div>
-  </section>
-
-
-  <section
-    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      style="min-height:330px; background: url(./assets/img/tn1.png); background-repeat: no-repeat; background-position: center; background-size: contain;">
-      <h1 class="my-4 font-normal text-grey-darker">
-        Predicting search trends
-      </h1>
-      <h2 class="my-4 font-normal">
-        Using a simplified Holt-Winters forecasting algorithm, we predict Google Search trends with elevated accuracy.
-      </h2>
-    </div>
-    <div class="w-full lg:w-1/2">
-      <img src="./assets/img/in4.png" alt="" />
-    </div>
-  </section>
-
-  <section
-    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2">
-      <img src="./assets/img/in5.png" alt="" />
-    </div>
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      style="min-height:330px; background: url(./assets/img/tn2.png); background-repeat: no-repeat; background-position: center; background-size: contain;">
-      <h1 class="my-4 font-normal text-grey-darker">
-        Sentiment analysis on the internet's most popular headlines
-      </h1>
-      <h2 class="my-4 font-normal">
-        You choose the topics, we show you world press related headlines, annotated with our sentiment analysis so you
-        easily understand the impact.
-      </h2>
-    </div>
-  </section>
-
-
-  <section
-    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full h-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      style="min-height:330px; background: url(./assets/img/tn3.png); background-repeat: no-repeat; background-position: center; background-size: contain;">
-      <h1 class="my-4 font-normal text-grey-darker">
-        Cross regions comparisons
-      </h1>
-      <h2 class="my-4 font-normal">
-        Compare people's interest in your chosen topics between countries and regions.
-      </h2>
-    </div>
-    <div class="w-full lg:w-1/2">
-      <img src="./assets/img/in6.png" alt="" />
-    </div>
-  </section>
-
-
-  <!-- Form -->
-  <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-2" id="subscribe-section"
-    style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
-    <div class="container mx-auto max-w-xl font-normal leading-normal text-center lg:text-left ">
-
-      <div class="w-full flex flex-col text-center items-center justify-center">
-        <!-- contact form -->
-        <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform? Request a demo.
-          </h1>
-          <p class="">
-            Is your company interested in internet behaviour research, consumer needs projections or event impact
-            measurements?
-            Request a demo by filling out this form. We will happily contact you with details.
-          </p>
-        </div>
-        <!-- /contact form -->
-        <form id="request-demo" class="w-full max-w-md" accept-charset="UTF-8"
-          action="https://usebasin.com/f/06dcf3d4ebaf" method="POST">
-          <div class="flex flex-wrap -mx-3 mb-6">
-            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-              <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-user-name">
-                Your Full Name
-              </label>
-              <input
-                class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                id="grid-user-name" type="text" name="user-name" placeholder="" required>
-            </div>
-            <div class="w-full md:w-1/2 px-3">
-              <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2"
-                for="grid-user-email">
-                Your business email
-              </label>
-              <input
-                class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-grey"
-                id="grid-user-email" type="email" name="business-user-email" placeholder="" required
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-            </div>
-          </div>
-          <div class="flex flex-wrap -mx-3 mb-6">
-            <div class="w-full px-3">
-              <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2"
-                for="grid-business-name">
-                The name of the business you represent
-              </label>
-              <input
-                class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-grey"
-                id="grid-business-name" type="text" name="business-name" placeholder="" required>
-            </div>
-          </div>
-          <div class="flex flex-wrap -mx-3 mb-6">
-            <div class="w-full px-3">
-              <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2"
-                for="grid-demo-reason">
-                The reason you requested the demo
-              </label>
-              <input
-                class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-grey"
-                id="grid-demo-reason" type="text" name="demo-reason" placeholder="">
-            </div>
-          </div>
-          <div class="flex flex-wrap -mx-3 mb-2">
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-              <input type="hidden" name="only_fake_users"><input>
-            </div>
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-              <button type="submit"
-                class="submit btn btn-primary btn-shadow btn-gradient py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-                style=" font-weight: 800; border:1px solid #FBB82B;">Request Demo</button>
-            </div>
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-
-            </div>
-          </div>
-        </form>
-      </div>
-      <br>
-      <h1 class="my-4 font-normal text-grey-darker">Join our crowdfunding journey</h1>
-      <p class="">
-        As we are working hard to achieve a great quality platform, we need
-        your help. Follow our Patreon posts to keep up with developments. Become a patron and help the project grow.
-        There's no strings attached. You can
-        cancel any time.
-      </p> <br>
-      <div class="container max-w-xl m-auto flex flex-wrap items-start justify-center">
-        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
-          <div class="overflow-hidden bg-white rounded-lg text-center">
-            <div class="p-6 flex flex-col justify-between ">
-              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Support the development</h4>
-              <p class="text-center">
-                <span class="text-grey-darker">
-                  <b> $4 </b> PER MONTH <br> + tax</span>
-              </p>
-            </div>
-            <img style="max-height: 200px;" src="../supporter-patron.png" alt="supporter patron">
-            <div class="p-6 flex flex-col justify-between ">
-              <p class="text-center text-sm">
-                <b>Up to 300 research reports. </b> <br>
-                Access exclusive content about our market research trends. <br>
-                Stay in touch with the latest developments. <br>
-                Be among the first to benefit from future offers. <br> <br>
-                You are among the first to be notified about our public research
-                experiments. <b> Thanks for supporting the project!</b>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
-          <div class="overflow-hidden bg-white rounded-lg text-center">
-            <div class="p-6 flex flex-col justify-between ">
-              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Innovator - Be among the first
-                users</h4>
-              <p class="text-center">
-                <span class="text-grey-darker">
-                  <b> $14 </b>
-                  PER MONTH <br> + tax </span>
-              </p>
-            </div>
-            <img style="max-height: 200px;" src="../innovator-patron.png" alt="innovator patron">
-            <div class="p-6 flex flex-col justify-between ">
-              <p class="text-center text-sm">
-                <b>Unilimited resarch reports. </b><br>
-                You'll take part in our innovation process. <br>
-                Get early access to the beta platform. <br>
-                Free training videos and webinars. <br>
-                Participate in discussions about future features. <br> <br>
-                You also benefit from all the offers from the Supporter tier, as well as early notifications to my AI &
-                research experiments. <b> Thank you for helping trendy dots grow!</b>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="w-full flex flex-col text-center items-center justify-center">
-        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
-          href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
-          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;
-          <span style="white-space: nowrap;"> Become a Patron</span>
-        </a>
-      </div>
-
-    </div>
-  </section>
-
-
-  <section class="bg-white py-4 font-sans">
-    <h3 class="font-medium text-grey-darkest mb-4 text-center text-2xl py-4"> Written using td. trend research </h3>
-
-    <div class="container max-w-xl m-auto flex flex-wrap items-center justify-start">
-
-      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-        <div
-          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-          <img class="w-full" style="padding: 25px 0;" src="./assets/img/candf.png" alt="Sunset in the mountains">
-          <div class="p-6 flex flex-col justify-between ">
-            <h3 class="font-medium text-grey-darkest mb-4 leading-normal text-center">
-              Cleantech & Fintech</h3>
-            <p class="text-center">
-              <a href="https://medium.com/@research.trendydots/cleantech-fintech-275ffb2c0a44" target="_blank"
-                class="bg-green-dark text-white font-bold py-2 px-4 rounded-full text-sm no-underline">Read
-                on Medium</a>
-            </p>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-        <div
-          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-          <img class="w-full" src="./assets/img/shandha.png" alt="Sunset in the mountains">
-          <div class="p-6 flex flex-col justify-between ">
-            <h3 class="font-medium text-grey-darkest mb-4 leading-normal text-center">
-              Smart Home vs. Home Automation</h3>
-            <p class="text-center">
-              <a href="https://medium.com/@research.trendydots/smart-home-vs-home-automation-403df3b2f7ae"
-                target="_blank"
-                class="bg-green-dark text-white font-bold py-2 px-4 rounded-full text-sm no-underline">Read on
-                Medium</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
-        <div
-          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-          <img style="padding: 36px 0;" class="w-full" src="./assets/img/aiandet.png" alt="Sunset in the mountains">
-          <div class="p-6 flex flex-col justify-between ">
-            <h3 class="font-medium text-grey-darkest mb-4 leading-normal text-center">AI and Ethics</h3>
-            <p class="text-center">
-              <a href="https://medium.com/@research.trendydots/ai-and-ethics-eace9f56710e" target="_blank"
-                class="bg-green-dark text-white font-bold py-2 px-4 rounded-full text-sm no-underline">Read on
-                Medium</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <section style="margin-top:5em"
-    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
-      <img src="./assets/img/inE1.png" alt="" />
-    </div>
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-      <h1 class="my-4 font-normal text-grey-darker">
-        NEW! Try out our summarisation tool for free
-      </h1>
-      <br />
-      <p class="leading-normal mb-4 ">
-        With this new experimental tool we aim to summarize a large text into a small paragraph. The experiment succeeds
-        if the summary ratio is less than 60%. If you are interested in our research, please visit our Patreon page.
-      </p>
-      <a href="/research/nlp/" id="summarizeBtn" class="hover:bg-grey-lighter no-underline" target="_blank"
-        style="text-align: center; border: 2px solid black; padding: 1em; box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
-        Try for free
-      </a>
-    </div>
-  </section>
 
   <footer class="font-sans bg-white py-8 px-4">
     <div
